--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -6,7 +6,7 @@
       {
          "route":"/*",
          "allowedRoles":[
-            "authenticated"
+            "readerAccess"
          ]
       }
    ],
